# multiplatform_screen_grabber

./: Cargo.toml  README.md  drawing_area.rs  function.rs  information_window.rs  main.rs  mouse_grab.rs  screenshot.rs  shortkeys_window.rs  window_format.rs
src/: convention_window.rs  drawing_area.rs  function.rs  information_window.rs  main.rs  screenshot.rs  shortkeys_window.rs  window_format.rs
